[tool.poetry]
name = "ahurg-healthcare-voiceagent"
version = "0.1.0"
description = ""
authors = ["bhanushankar422 <bhanushankar422@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
livekit-agents = {extras = ["cartesia", "deepgram", "openai", "silero", "turn-detector"], version = "*"}
livekit-plugins-noise-cancellation = "*"
python-dotenv = ">=1.1.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
